tests/fixtures/invalid/round_float_dict.py
# Cannot call round() with Float, Dict[str, int]
x = round(1.0, {"a": 1})
